tests/baselines/reference/concatClassAndString.errors.txt
==== tests/cases/compiler/concatClassAndString.ts (2 errors) ====
    // Shouldn't compile (the long form f = f + ""; doesn't):
    class f { }
    
    f += '';
    ~
!!! error TS2012: Cannot convert 'string' to 'typeof f':
!!! 	Type 'String' is missing property 'prototype' from type 'typeof f'.
    ~
!!! error TS2130: Invalid left-hand side of assignment expression.
    